@@ -42,7 +42,7 @@ iRec1DForward_X_dilation2 (T* __restrict__ marker, const T* __restrict__ mask, c
 		}
 		__syncthreads();
 
-		T s_old;
+		T s_old, last;
 		// the increment allows overlap by 1 between iterations to move the data to next block.
 		for (startx = 0; startx < sx - Y_THREADS; startx += Y_THREADS - 1) {
 			// copy part of marker and mask to shared memory
@@ -55,11 +55,13 @@ iRec1DForward_X_dilation2 (T* __restrict__ marker, const T* __restrict__ mask, c
 
 			// perform iteration   all X threads do the same operations, so there may be read/write hazards.  but the output is the same.
 			// this is looping for BLOCK_SIZE times, and each iteration the final results are propagated 1 step closer to tx.
+			last = s_marker[0][ty];
 			for (ix = 1; ix < Y_THREADS; ++ix) {
 				s_old = s_marker[ix][ty];
-				s_marker[ix][ty] = max( s_marker[ix][ty], s_marker[ix-1][ty] );
+				s_marker[ix][ty] = max( s_marker[ix][ty], last );
 				s_marker[ix][ty] = min( s_marker[ix][ty], s_mask  [ix]  [ty] );
 				s_change[ix][ty] |= NEQ( s_old, s_marker[ix][ty] );
+				last = s_marker[ix][ty];
 			}
 			__syncthreads();
 
@@ -83,11 +85,13 @@ iRec1DForward_X_dilation2 (T* __restrict__ marker, const T* __restrict__ mask, c
 		__syncthreads();
 
 		// perform iteration
+		last = s_marker[0][ty];
 		for (ix = 1; ix < Y_THREADS; ++ix) {
 			s_old = s_marker[ix][ty];
-			s_marker[ix][ty] = max( s_marker[ix][ty], s_marker[ix-1][ty] );
+			s_marker[ix][ty] = max( s_marker[ix][ty], last );
 			s_marker[ix][ty] = min( s_marker[ix][ty], s_mask  [ix]  [ty] );
 			s_change[ix][ty] |= NEQ( s_old, s_marker[ix][ty] );
+			last = s_marker[0][ty];
 		}
 		__syncthreads();
 
@@ -192,78 +196,106 @@ iRec1DBackward_X_dilation2 (T* __restrict__ marker, const T* __restrict__ mask, 
 /*
  * original code
  */
-/*
+// sx should be step size...
  template <typename T>
 __global__ void
 iRec1DForward_X_dilation ( T* __restrict__ marker, const T* __restrict__ mask, const int sx, const int sy, bool* __restrict__ change )
 {
+	extern __shared__ char array[];
 
 	const int tx = threadIdx.x;
 	const int ty = threadIdx.y;
-	const int by = blockIdx.x * Y_THREADS;
+	const int by = blockIdx.y * blockDim.y;
+	const int numEl = sizeof(uint4) / sizeof(T);
+	const int s_step = blockDim.x * numEl;
+	const int tsx = sx / numEl;
+
+
+	// can do 32 y threads, 4 x threads,16 bytes per element, total 4272 bytes, allows 8 threads.
+	T* s_marker = (T*)array;
+	T* s_mask = (T*)(&array[blockDim.y * s_step * sizeof(T)]);
+	bool* s_change = (bool*)(&array[blockDim.y * s_step * sizeof(T) * 2]);
+
+//	if (tx == 0) {
+//		s_marker = (T*)malloc(blockDim.y * s_step * sizeof(T));
+//		s_mask = (T*)malloc(blockDim.y * s_step * sizeof(T));
+//		s_change = (bool*)malloc(blockDim.y * s_step * sizeof(bool));
+//	}
+
+	uint4* t_marker = (uint4*) marker;
+	uint4* t_mask = (uint4*) mask;
+	uint4* ts_marker = (uint4*) s_marker;
+	uint4* ts_mask = (uint4*) s_mask;
 
 	if (ty + by < sy) {
 
-		volatile __shared__ T s_marker[X_THREADS][Y_THREADS+1];
-		volatile __shared__ T s_mask  [X_THREADS][Y_THREADS+1];
-		volatile __shared__ bool  s_change[X_THREADS][Y_THREADS+1];
-		s_change[tx][ty] = false;
+		for (int i = 0; i < numEl; ++i) {
+			s_change[ty * s_step + tx * numEl + i] = false;
+		}
 		__syncthreads();
 
 		T s_old;
 		int startx;
 		// the increment allows overlap by 1 between iterations to move the data to next block.
-		for (startx = 0; startx < sx - X_THREADS; startx += X_THREADS - 1) {
-
+		for (startx = 0; startx < sx - s_step; startx += s_step - numEl) {
+			t_marker = (uint4*)(marker + (by * sx + startx));
+			t_mask = (uint4*)(mask + (by * sx + startx));
 			// copy part of marker and mask to shared memory
-			s_marker[tx][ty] = marker[(by + ty)*sx + startx + tx];
-			s_mask  [tx][ty] = mask  [(by + ty)*sx + startx + tx];
+			// index for shared is (ty * s_step + tx * numEl) / numEl.
+			ts_marker[ty * blockDim.x + tx] = t_marker[ty * tsx + tx];
+			ts_mask  [ty * blockDim.x + tx] = t_mask  [ty * tsx + tx];
 			__syncthreads();
 
 			// perform iteration   all X threads do the same operations, so there may be read/write hazards.  but the output is the same.
 			// this is looping for BLOCK_SIZE times, and each iteration the final results are propagated 1 step closer to tx.
-			for (int ix = 1; ix < X_THREADS; ix++) {
-				s_old = s_marker[ix][ty];
-				s_marker[ix][ty] = max( s_marker[ix][ty], s_marker[ix-1][ty] );
-				s_marker[ix][ty] = min( s_marker[ix][ty], s_mask  [ix]  [ty] );
-				s_change[ix][ty] |= NEQ( s_old, s_marker[ix][ty] );
+			for (int ix = numEl; ix < s_step; ix++) {
+				s_old = s_marker[ty * s_step + ix];
+				s_marker[ty * s_step + ix] = max( s_marker[ty * s_step + ix], s_marker[ty * s_step + ix-1] );
+				s_marker[ty * s_step + ix] = min( s_marker[ty * s_step + ix], s_mask  [ty * s_step + ix] );
+				s_change[ty * s_step + ix] |= NEQ( s_old, s_marker[ty * s_step + ix] );
 			}
 			__syncthreads();
 
 			// output result back to global memory
-			marker[(by + ty)*sx + startx + tx] = s_marker[tx][ty];
+			t_marker[ty * tsx + tx] = ts_marker[ty * blockDim.x + tx];
 			__syncthreads();
 
 		}
 
-		startx = sx - X_THREADS;
+		startx = sx - s_step;
+		t_marker = (uint4*)(marker + (by * sx + startx));
+		t_mask = (uint4*)(mask + (by * sx + startx));
 
 		// copy part of marker and mask to shared memory
-		s_marker[tx][ty] = marker[(by + ty)*sx + startx + tx];
-		s_mask  [tx][ty] = mask  [(by + ty)*sx + startx + tx];
+		ts_marker[ty * blockDim.x + tx] = t_marker[ty * tsx + tx];
+		ts_mask  [ty * blockDim.x + tx] = t_mask  [ty * tsx + tx];
 		__syncthreads();
 
 		// perform iteration
-		for (int ix = 1; ix < X_THREADS; ix++) {
-			s_old = s_marker[ix][ty];
-			s_marker[ix][ty] = max( s_marker[ix][ty], s_marker[ix-1][ty] );
-			s_marker[ix][ty] = min( s_marker[ix][ty], s_mask  [ix]  [ty] );
-			s_change[ix][ty] |= NEQ( s_old, s_marker[ix][ty] );
+		for (int ix = numEl; ix < s_step; ix++) {
+			s_old = s_marker[ty * s_step + ix];
+			s_marker[ty * s_step + ix] = max( s_marker[ty * s_step + ix], s_marker[ty * s_step + ix-1] );
+			s_marker[ty * s_step + ix] = min( s_marker[ty * s_step + ix], s_mask  [ty * s_step + ix] );
+			s_change[ty * s_step + ix] |= NEQ( s_old, s_marker[ty * s_step + ix] );
 		}
 		__syncthreads();
 
 		// output result back to global memory
-		marker[(by + ty)*sx + startx + tx] = s_marker[tx][ty];
-		__syncthreads();
-
-		if (s_change[tx][ty]) *change = true;
+		t_marker[ty * tsx + tx] = ts_marker[ty * blockDim.x + tx];
+		if (s_change[ty * s_step + tx]) *change = true;
 		__syncthreads();
 
 	}
+//	if (tx == 0) {
+//		free(s_marker);
+//		free(s_mask);
+//		free(s_change);
+//	}
+
 
 }
-*/
-/*
+
+
 template <typename T>
 __global__ void
 iRec1DBackward_X_dilation ( T* __restrict__ marker, const T* __restrict__ mask, const int sx, const int sy, bool* __restrict__ change )
@@ -332,7 +364,7 @@ iRec1DBackward_X_dilation ( T* __restrict__ marker, const T* __restrict__ mask, 
 	}
 
 }
-*/
+
 
 /*
 template <typename T>
@@ -603,11 +635,13 @@ iRec1DBackward_Y_dilation_8 ( T* __restrict__ marker, const T* __restrict__ mask
 		// setup execution parameters
 		bool conn8 = (connectivity == 8);
 
-		dim3 threadsx( X_THREADS, Y_THREADS );
+		dim3 threadsx( 2, 64 );
 		dim3 threadsx2( Y_THREADS );
-		dim3 blocksx( divUp(sy, threadsx.y) );
+		dim3 blocksx( 1, divUp(sy, threadsx.y) );
+		dim3 blocksx2( divUp(sy, threadsx.y) );
 		dim3 threadsy( MAX_THREADS );
 		dim3 blocksy( divUp(sx, threadsy.x) );
+		size_t Nsx = threadsx.x * threadsx.y * (sizeof(uint4) * 2 + sizeof(uint4) / sizeof(T));
 
 		// stability detection
 		unsigned int iter = 0;
@@ -626,21 +660,21 @@ iRec1DBackward_Y_dilation_8 ( T* __restrict__ marker, const T* __restrict__ mask
 				init_change<<< 1, 1, 0, stream>>>( d_change );
 
 				// dopredny pruchod pres osu X
-				//iRec1DForward_X_dilation <<< blocksx, threadsx, 0, stream >>> ( marker, mask, sx, sy, d_change );
-				iRec1DForward_X_dilation2<<< blocksx, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
-
+				iRec1DForward_X_dilation <<< blocksx, threadsx, Nsx, stream >>> ( marker, mask, sx, sy, d_change );
+//				iRec1DForward_X_dilation2<<< blocksx2, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
+/*
 				// dopredny pruchod pres osu Y
 				iRec1DForward_Y_dilation_8<<< blocksy, threadsy, 0, stream >>> ( marker, mask, sx, sy, d_change );
 
 				// zpetny pruchod pres osu X
 				//iRec1DBackward_X_dilation<<< blocksx, threadsx, 0, stream >>> ( marker, mask, sx, sy, d_change );
-				iRec1DBackward_X_dilation2<<< blocksx, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
+				iRec1DBackward_X_dilation2<<< blocksx2, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
 
 				// zpetny pruchod pres osu Y
 				iRec1DBackward_Y_dilation_8<<< blocksy, threadsy, 0, stream >>> ( marker, mask, sx, sy, d_change );
-
+*/
 				if (stream == 0) cudaSafeCall(cudaDeviceSynchronize());
-				else cudaSafeCall( cudaStreamSynchronize(stream));
+//				else cudaSafeCall( cudaStreamSynchronize(stream));
 //				printf("%d sync \n", iter);
 
 				cudaSafeCall( cudaMemcpy( h_change, d_change, sizeof(bool), cudaMemcpyDeviceToHost ) );
@@ -655,21 +689,21 @@ iRec1DBackward_Y_dilation_8 ( T* __restrict__ marker, const T* __restrict__ mask
 				init_change<<< 1, 1, 0, stream>>>( d_change );
 
 				// dopredny pruchod pres osu X
-				//iRec1DForward_X_dilation <<< blocksx, threadsx, 0, stream >>> ( marker, mask, sx, sy, d_change );
-				iRec1DForward_X_dilation2<<< blocksx, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
+				iRec1DForward_X_dilation <<< blocksx, threadsx, Nsx, stream >>> ( marker, mask, sx, sy, d_change );
+				//iRec1DForward_X_dilation2<<< blocksx2, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
 
-				// dopredny pruchod pres osu Y
+/*				// dopredny pruchod pres osu Y
 				iRec1DForward_Y_dilation <<< blocksy, threadsy, 0, stream >>> ( marker, mask, sx, sy, d_change );
 
 				// zpetny pruchod pres osu X
 				//iRec1DBackward_X_dilation<<< blocksx, threadsx, 0, stream >>> ( marker, mask, sx, sy, d_change );
-				iRec1DBackward_X_dilation2<<< blocksx, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
+				iRec1DBackward_X_dilation2<<< blocksx2, threadsx2, 0, stream >>> ( marker, mask, sx, sy, d_change );
 
 				// zpetny pruchod pres osu Y
 				iRec1DBackward_Y_dilation<<< blocksy, threadsy, 0, stream >>> ( marker, mask, sx, sy, d_change );
-
+*/
 				if (stream == 0) cudaSafeCall(cudaDeviceSynchronize());
-				else cudaSafeCall( cudaStreamSynchronize(stream));
+//				else cudaSafeCall( cudaStreamSynchronize(stream));
 //				printf("%d sync \n", iter);
 
 				cudaSafeCall( cudaMemcpy( h_change, d_change, sizeof(bool), cudaMemcpyDeviceToHost ) );
